@@ -1,3 +1,12 @@
+2007-01-17  Brian Warner  <warner@lothar.com>
+
+	* contrib/darcs_buildbot.py: enhance to handle multiple patches
+	being pushed at a time. This keeps state in the repository in a
+	small file named .darcs_buildbot-lastchange, but that shouldn't
+	interfere with normal repository operations. Fixes SF#1534049.
+	* buildbot/clients/sendchange.py (Sender): make a single Sender
+	capable of sending Changes with different usernames.
+
 2006-12-11  Brian Warner  <warner@lothar.com>
 
 	* buildbot/changes/freshcvsmail.py: mark this file as deprecated,
